<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#073993"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.lionzxy.easystudy.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.lionzxy.easystudy.views.OdudaBoldText
            android:text="@string/app_logo_name"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="40dp"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:gravity="center"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_primaryColor="@color/white"
                app:met_textColor="@color/white"
                app:met_textColorHint="@color/white"
                app:met_underlineColor="@color/white"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:met_baseColor="@color/white"
                app:met_primaryColor="@color/white"
                app:met_textColor="@color/white"
                app:met_textColorHint="@color/white"
                app:met_underlineColor="@color/white"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_forgotpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forget_password" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/loginbutton"
            android:text="@string/login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration" />
    </LinearLayout>
</RelativeLayout>
